deploy/prod-db-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spesialist-db-policy-prod
  namespace: tbd
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 35.228.203.103/32
  podSelector:
    matchLabels:
      db_policy_user: spesialistbruker
  policyTypes:
    - Egress
